<resources>
    <string name="app_name">RxJava2Basics</string>
    <string name="hello_intent">Hello World!\n</string>
    <string name="run">run</string>
    <string name="rx_binding">Rx Binding</string>
    <string name="subjects">Subjects</string>
    <string name="publish_subject">Publish Subject</string>
    <string name="replay_subject">Replay Subject</string>
    <string name="behavior_subject">Behavior Subject</string>
    <string name="async_subject">Async Subject</string>
</resources>
